--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -3,65 +3,32 @@
 <html lang="en">
 
 <head>
-	<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2convertss.com</title>
+	<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2converts.com</title>
 	<meta name="description" content="Convert and download Youtube videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
 	/>
-	<link rel="canonical" href="https://Y2convertss.com/youtube-mp3/en1" />
+	<link rel="canonical" href="https://Y2converts.com/youtube-mp3/en-id.html" />
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name = "keywords" content = youtube mp3, youtube to mp3,youtube,mp3,converter,downloader,best youtube to mp3 converter
 best youtube to mp3" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="robots" content="noindex, nofollow">
+	<meta name="robots" content="index, follow">
 	<meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
 	<meta property="og:description" content="Convert and download Youtube videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
 	/>
 	<meta property="og:image" content="/image/logo.svg" />
-	<link rel="alternate" href="/youtube-mp3/en1" hreflang="x-default" />
-	<link rel="alternate" href="/youtube-mp3/en1"
-	 hreflang="en" />
-	<link rel="alternate" href="/youtube-mp3/de" hreflang="de" />
-	<link rel="alternate" href="/youtube-mp3/es" hreflang="es" />
-	<link rel="alternate" href="/youtube-mp3/fr" hreflang="fr" />
-	<link rel="alternate" href="/youtube-mp3/hi" hreflang="hi" />
-	<link rel="alternate" href="/youtube-mp3/id" hreflang="id" />
-	<link rel="alternate" href="/youtube-mp3/it" hreflang="it" />
-	<link rel="alternate" href="/youtube-mp3/ja" hreflang="ja" />
-	<link rel="alternate" href="/youtube-mp3/ko" hreflang="ko" />
-	<link rel="alternate" href="/youtube-mp3/my" hreflang="my" />
-	<link rel="alternate" href="/youtube-mp3/ms" hreflang="ms" />
-	<link rel="alternate" href="/youtube-mp3/ph" hreflang="en-PH" />
-	<link rel="alternate" href="/youtube-mp3/pt" hreflang="pt" />
-	<link rel="alternate" href="/youtube-mp3/ru" hreflang="ru" />
-	<link rel="alternate" href="/youtube-mp3/th" hreflang="th" />
-	<link rel="alternate" href="/youtube-mp3/tr" hreflang="tr" />
-	<link rel="alternate" href="/youtube-mp3/vi" hreflang="vi" />
-	<link rel="alternate" href="/youtube-mp3/zh" hreflang="zh-CN" />
-	<link rel="alternate" href="/youtube-mp3/zh" hreflang="zh-TW" />
-	<link rel="alternate" href="/youtube-mp3/sa" hreflang="sa" />
-	<link rel="alternate" href="/youtube-mp3/bn" hreflang="bn" />
+	<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
+	<link rel="alternate" href="/youtube-mp3/en-id.html"
+	 hreflang="en-id" />
+	<link rel="alternate" href="/youtube-mp3/hi.html" hreflang="in" />
+	<link rel="alternate" href="/youtube-mp3/ph.html" hreflang="ph" />
+	
+	
 
 	<link rel="icon" type="image/png" href="/image/favicon.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/youtube-mp3/image/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/youtube-mp3/image/apple-touch-icon-114x114.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/youtube-mp3/image/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/youtube-mp3/image/apple-touch-icon-144x144.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="/youtube-mp3/image/apple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/youtube-mp3/image/apple-touch-icon-120x120.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/youtube-mp3/image/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/youtube-mp3/image/apple-touch-icon-152x152.png"
-	/>
-	<link rel="icon" type="image/png" href="/images/logo.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="/images/logo.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="/images/logo.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="/images/logo.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="/images/logo.png" sizes="128x128" />
-	<meta name="application-name" content="Y2convertss" />
-	<link rel="stylesheet" type="text/css" href="http://ytloader.ezyro.com/css/1css.css">
+	<meta name="application-name" content="Y2converts.com" />
+	<link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>h4{
     font-weight: 600;
     font-size: 29px;
@@ -73,7 +40,7 @@ best youtube to mp3" />
 <body>
 <header>
 <div class="main_nav">
-<a class="logo" href="https://Y2converts.com/en7">
+<a class="logo" href="https://Y2converts.com/youtube-mp3/en-id.html">
 <svg xmlns="http://www.w3.org/2000/svg" width="37" height="28" viewBox="0 0 37 28" fill="none" alt="Y2converts">
 <g clip-path="url(#clip0)">
 <path d="M0.413567 5.80249C0.646742 2.9375 2.94402 0.705376 5.81232 0.517162C9.497 0.275378 14.5363 0 18.375 0C22.2137 0 27.253 0.275378 30.9377 0.517162C33.806 0.705375 36.1033 2.9375 36.3364 5.80249C36.5469 8.38873 36.75 11.5252 36.75 14C36.75 16.4748 36.5469 19.6113 36.3364 22.1975C36.1033 25.0625 33.806 27.2946 30.9377 27.4828C27.253 27.7246 22.2137 28 18.375 28C14.5363 28 9.497 27.7246 5.81232 27.4828C2.94402 27.2946 0.646742 25.0625 0.413567 22.1975C0.203079 19.6113 0 16.4748 0 14C0 11.5252 0.203079 8.38873 0.413567 5.80249Z" fill="#FF0000" />
@@ -92,27 +59,11 @@ best youtube to mp3" />
 </svg></div>
 <div class="sub-language">
 <ul class="sub_menu">
-<li><a data-lang="en" href="/en7">English</a></li>
-<li><a data-lang="de" href="/de5">Deutsch</a></li>
-<li><a data-lang="es" href="/es6">Español</a></li>
-<li><a data-lang="fr" href="/fr">Français</a></li>
-<li><a data-lang="hi" href="/hi">हिन्दी / Hindī</a></li>
-<li><a data-lang="id" href="/id">Indonesian</a></li>
-<li><a data-lang="it" href="/it1">Italiano</a></li>
-<li><a data-lang="ja" href="/ja1">日本語</a></li>
-<li><a data-lang="ko" href="/ko1">한국어</a></li>
-<li><a data-lang="my" href="/my1">Myanmar (မြန်မာ)</a></li>
-<li><a data-lang="ms" href="/ms">Malay</a></li>
-<li><a data-lang="ph" href="/ph">Filipino</a></li>
-<li><a data-lang="pt" href="/pt2">Português</a></li>
-<li><a data-lang="ru" href="/ru1">Русский</a></li>
-<li><a data-lang="th" href="/th">ไทย</a></li>
-<li><a data-lang="tr" href="/tr1">Türkçe</a></li>
-<li><a data-lang="vi" href="/vi1">Tiếng Việt</a></li>
-<li><a data-lang="zh-cn" href="/zh-cn">简体中文</a></li>
-<li><a data-lang="zh-tw" href="/zh-tw">繁體中文</a></li>
-<li><a data-lang="sa" href="/sa1">العربية</a></li>
-<li><a data-lang="bn" href="/bn">বাঙালি</a></li>
+<li><a data-lang="en" href="/youtube-mp3/en.html">English</a></li>
+<li><a data-lang="hi" href="/youtube-mp3/hi.html">हिंदी</a></li>
+<li><a data-lang="ph" href="/youtube-mp3/ph.html">philippines</a></li>
+
+
 </ul>
 </div>
 </div>
