--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -28,7 +28,7 @@ best youtube to mp3" />
 
 	<link rel="icon" type="image/png" href="/image/favicon.png" />
 	<meta name="application-name" content="Y2converts.com" />
-	<link rel="stylesheet" type="text/css" href="/css/css1.css">
+	<link rel="stylesheet" type="text/css" href="adarsh/css/css1.css">
 <style>h4{
     font-weight: 600;
     font-size: 29px;
@@ -238,7 +238,7 @@ That’s it, now you can download your favorite YouTube video and play it on you
 <p class="mag0"> © 2021 Y2converts.com </p>
 </div>
 </footer>
-<script type="text/javascript" src="http://ytloader.ezyro.com/js.js" async defer></script>
+<script type="text/javascript" src="/adarsh/js/js1.js" async defer></script>
 
 
 
