--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -240,7 +240,55 @@ That’s it, now you can download your favorite YouTube video and play it on you
 </footer>
 <script type="text/javascript" src="/js/js1.js" async defer></script>
 
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "HowTo", 
+  "name": "Youtube to mp3",
+  "description": "Click here to convert youtube to mp3 free and superfast.",
+  "image": "https://i.ibb.co/09GyGQR/4.png",
+  "totalTime": "PT2M",
+  "estimatedCost": {
+    "@type": "MonetaryAmount",
+    "currency": "INR",
+    "value": "0"
+  },
+  "supply": {
+    "@type": "HowToSupply",
+    "name": "Featured image"
+  },
+  "tool": {
+    "@type": "HowToTool",
+    "name": "youtube to mp3 converter"
+  },
+  "step": [{
+    "@type": "HowToStep",
+    "text": "1.Copy the video url you wist to convert.",
+    "image": "https://i.ibb.co/WfJKDL6/1.png",
+    "name": "Copy video url",
+    "url": "https://y2converts.com/youtube-mp3/en-id"
+  },{
+    "@type": "HowToStep",
+    "text": "2. Paste the video url in searchbox or search for keyword and click convert.",
+    "image": "https://i.ibb.co/pQSd9KF/2.png",
+    "name": "Paste or Search and click convert.",
+    "url": "https://y2converts.com/youtube-mp3/en-id"
+  },{
+    "@type": "HowToStep",
+    "text": "3.Choose the format you want to download.",
+    "image": "https://i.ibb.co/3mmTZVp/3.png",
+    "name": "Choose Format",
+    "url": "https://y2converts.com/youtube-mp3/en-id"
+  },{
+    "@type": "HowToStep",
+    "text": "Click on Download. Now you have succesfully converted youtube to mp3 and saved to your computer.
+Don't Forget to SHARE the Website",
+    "image": "https://i.ibb.co/09GyGQR/4.png",
+    "name": "Click on Download.",
+    "url": "https://y2converts.com/youtube-mp3/en-id"
+  }]    
+}
+</script>
 
 
 
