--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -263,7 +263,7 @@ That’s it, now you can download your favorite YouTube video and play it on you
   },
   "step": [{
     "@type": "HowToStep",
-    "text": "1.Copy the video url you wist to convert.",
+    "text": "1.Copy the video url you wish to convert.",
     "image": "https://i.ibb.co/WfJKDL6/1.png",
     "name": "Copy video url",
     "url": "https://y2converts.com/youtube-mp3/en-id"
