--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -289,7 +289,35 @@ Don't Forget to SHARE the Website",
   }]    
 }
 </script>
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "Is it free to use unlimited?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes. In our site convert video unlimed times."
+    }
+  },{
+    "@type": "Question",
+    "name": "Which are the formats avaliable?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "We have many choices like MP3, MP4, WAW, 3GP .
+Youtube to mp3, youtube mp3, youtube mp4, youtube downloader."
+    }
+  },{
+    "@type": "Question",
+    "name": "Where do files get download?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "The files get download in your system in downloads folder."
+    }
+  }]
+}
+</script>
 
 
 </body>
