--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -69,20 +69,13 @@ best youtube to mp3" />
 </div>
 <div id="navbar" class="navbar-collapse">
 <ul class="nav navbar-nav">
-<li>
-<a href="/en7" >
-Youtube Downloader
-</a></li>
-<li><a href="/youtube-mp3/en13"class="active">
+<li><a href="/youtube-mp3/en-id/"class="active">
 Youtube mp3
 </a>
 </li>
-<li> <a href="/youtube-to-mp4/en13">
-Youtube to MP4
-</a>
-</li>
-<li class="nav-item"> <a href="/blog">
-Blog
+
+<li class="nav-item"> <a href="https://www.youtube.com/channel/UChQ7F1Rx-DWco_PIspv0kUA">
+Follow on Youtube
 </a>
 </li>
 </ul>
