--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -139,7 +139,7 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 <ul class="listicon liststep">
 <li>
 <span class="number">1</span>
-<span>Cpoy and Paste YouTube url or search keywords into the search box.</span>
+<span>copy and Paste YouTube url or search keywords into the search box.</span>
 </li>
 <li>
 <span class="number">2</span>
