--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -143,7 +143,7 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 </li>
 <li>
 <span class="number">2</span>
-<span>Choose output MP4 or MP3 format you want to convert and click "Download" button.</span>
+<span>Choose the format output MP4 or MP3 format you want to convert and click "Download" button.</span>
 </li>
 <li>
 <span class="number">3</span>
@@ -187,7 +187,7 @@ The last step is clicking “Download MP3” and choosing where you want it down
 </div>
 <h4 class="title">Yt to mp3</h4>
 
-<p1 class="mw70" style="font-weight:100">A YouTube to mp3 converter is a tool that converts video files from youtube and other video providers into mp3 files. It is used to download mp3 songs from youtube videos. There are some steps on how to download music from youtube. First, search for the video that you want to download. Select it and choose the format that you want for your audio file. Click on "Download" button to start downloading the audio file from Youtube to mp3 converter online service, then wait patiently before your MP3 file is done downloading.
+<p1 class="mw70" style="font-weight:100">A YouTube to mp3 converter is a tool that converts video files from youtube and other video providers into mp3 files. It is used to download mp3 songs from youtube videos. There are some steps on how to download music from youtube. First step method, search for the video that you want to download. Select it and choose the format that you want for your audio file. Click on "Download" button to start downloading the audio file from Youtube to mp3 converter online service, then wait patiently before your MP3 file is done downloading.
 There are many reasons why people need a YouTube to mp3 converter; such as if they want to listen in another device, or if their computer doesn't have enough space, or if they just want a back-up copy of their favorite songs .
 </p1>
 
