--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -14,7 +14,7 @@ best youtube to mp3" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="robots" content="index, follow">
 	<meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
-	<meta property="og:description" content="Convert and download Youtube videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
+	<meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple."
 	/>
 	<meta property="og:image" content="/image/logo.svg" />
 	<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
@@ -58,7 +58,7 @@ best youtube to mp3" />
 </svg></div>
 <div class="sub-language">
 <ul class="sub_menu">
-<li><a data-lang="en" href="/youtube-mp3/en.html">English</a></li>
+<li><a data-lang="en" href="/youtube-mp3/en-id.html">English</a></li>
 <li><a data-lang="hi" href="/youtube-mp3/hi.html">हिंदी</a></li>
 <li><a data-lang="ph" href="/youtube-mp3/ph.html">philippines</a></li>
 
