--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -226,6 +226,7 @@ That’s it, now you can download your favorite YouTube video and play it on you
 <li><a href="/contact-us">Contact us</a></li>
 <li><a href="/privacy-policy">Privacy Policy</a></li>
 <li><a href="/terms-of-service">Terms of service</a></li>
+<li><a href="/about-us">About us</a></li>
 </ul>
 <p class="mag0"> © 2021 Y2converts.com </p>
 </div>
