--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -16,7 +16,7 @@ best youtube to mp3" />
 	<meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
 	<meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple."
 	/>
-	<meta property="og:image" content="/image/logo.svg" />
+	<meta property="og:image" content="/image/favicon.PNG" />
 	<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
 	<link rel="alternate" href="/youtube-mp3/en-id.html"
 	 hreflang="en-id" />
@@ -25,7 +25,7 @@ best youtube to mp3" />
 	
 	
 
-	<link rel="icon" type="image/png" href="/image/favicon.png" />
+	<link rel="icon" type="image/png" href="/image/favicon.PNG" />
 	<meta name="application-name" content="Y2converts.com" />
 	<link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>h4{
