--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -28,7 +28,12 @@ best youtube to mp3" />
 	<link rel="icon" type="image/png" href="/image/favicon.PNG" />
 	<meta name="application-name" content="Y2converts.com" />
 	<link rel="stylesheet" type="text/css" href="/css/css1.css">
-<style>h4{
+<style>
+								   .responsive {
+  width: 100%;
+  height: auto;
+}
+								   h4{
     font-weight: 600;
     font-size: 29px;
     margin-bottom: 15px;
