--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2converts.com</title>
-	<meta name="description" content="Convert and download Youtube videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
+	<meta name="description" content="Convert and download Youtube mp3 videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
 	/>
 	<link rel="canonical" href="https://Y2converts.com/youtube-mp3/en-id.html" />
 <meta name="theme-color" content="red" />
@@ -101,7 +101,7 @@ Follow on Youtube
 </div>
 <div class="ftco-section center">
 <h2 class="title">The Best Youtube mp3 converter</h2>
-<p class="mw70">Y2converts.com is Youtube mp3 converter and downloader which helps you save Youtube videos to your device quickly and safely. We have various variety for you to download best Youtube mp3 videos.
+<p class="mw70">Y2converts.com is Youtube mp3 converter and downloader which helps you save Youtube mp3 videos to your device quickly and safely. We have various variety for you to download best Youtube mp3 videos.
 We are the best platform of online Youtube mp3 converter. You will get easy method to convert youtube video to mp3.</p>
 <ul class="listitem items-more">
 <li>
@@ -136,11 +136,11 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 <div class="ftco-section center">
 <h2 class="title">Youtube MP3 Converter</h2>
 
-<p1 class="mw70" style="font-weight:100">Download Youtube videos with Y2converts.com YouTube Mp3 Converter. By using our downloader you can convert YouTube videos to MP3, MP4, 3GP,files and download them for free - this service works for computers, tablets and mobile devices. The videos are always converted in the highest available quality OR you can change quality as per your wish.</p1>
+<p1 class="mw70" style="font-weight:100">Download Youtube mp3 videos with Y2converts.com YouTube Mp3 Converter. By using our downloader you can convert YouTube videos to MP3, MP4, 3GP,files and download them for free - this service works for computers, tablets and mobile devices. The videos are always converted in the highest available quality OR you can change quality as per your wish.</p1>
 <p class="magT40"><a class="btn-red mag0" type="button" href="#convert">Convert now</a></p>
 </div>
 <div class="ftco-section center">
-<h2 class="title">How to download Youtube video in my device? </h2>
+<h2 class="title">How to download Youtube mp3 video in my device? </h2>
 <ul class="listicon liststep">
 <li>
 <span class="number">1</span>
@@ -167,7 +167,7 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 <div class="ftco-section center">
 <h4 class="title">What is a YouTube to MP3 Converter?</h4>
 
-<p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube videos to mp3. The program is designed in such a way that the original quality of a Youtube video is preserved during the conversion process. Also, the program also allows you to play a converted mp3 video directly on any media player. In addition, the program also offers the option to save a video to a specific folder or convert the video to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube videos. It is important to note that the file format used for converting Youtube videos to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert videos in this format as well.</p1>
+<p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube mp3 videos to mp3. The program is designed in such a way that the original quality of a Youtube mp3 video is preserved during the conversion process. Also, the program also allows you to play a converted mp3 video directly on any media player. In addition, the program also offers the option to save a video to a specific folder or convert the video to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube videos. It is important to note that the file format used for converting Youtube mp3 videos to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert videos in this format as well.</p1>
 
 </div>
 <h4 class="title">Convert YouTube MP3</h4>
