--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -5,7 +5,7 @@
 	<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2converts.com</title>
 	<meta name="description" content="Convert and download Youtube mp3 videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
 	/>
-	<link rel="canonical" href="https://Y2converts.com/youtube-mp3/en-id.html" />
+	<link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id.html" />
 <meta name="theme-color" content="red" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
