--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -39,6 +39,16 @@ best youtube to mp3" />
     margin-bottom: 15px;
     text-align: center;
 }</style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-200890208-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-200890208-2');
+</script>
+ 
 </head>
 
 <body>
