--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -1,33 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2converts.com</title>
-	<meta name="description" content="Convert and download Youtube mp3 videos to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple."
-	/>
-	<link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id.html" />
+<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|Y2converts.com</title>
+<meta name="description" content="Convert and download Youtube mp3 mp3s to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple." />
+<script src="/cdn-cgi/apps/head/elgUFyCatlfWRmBzNOxTvWEbgRo.js"></script><link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id.html" />
 <meta name="theme-color" content="red" />
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name = "keywords" content = youtube mp3, youtube to mp3,youtube,mp3,converter,downloader,best youtube to mp3 converter
-best youtube to mp3" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="robots" content="index, follow">
-	<meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
-	<meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple."
-	/>
-	<meta property="og:image" content="/image/favicon.PNG" />
-	<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
-	<link rel="alternate" href="/youtube-mp3/en-id.html"
-	 hreflang="en-id" />
-	<link rel="alternate" href="/youtube-mp3/hi.html" hreflang="in" />
-	<link rel="alternate" href="/youtube-mp3/ph.html" hreflang="ph" />
-	
-	
-
-	<link rel="icon" type="image/png" href="/image/favicon.PNG" />
-	<meta name="application-name" content="Y2converts.com" />
-	<link rel="stylesheet" type="text/css" href="/css/css1.css">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="keywords" content = youtube mp3, youtube to mp3,youtube,mp3,converter,downloader,best youtube to mp3 converter best youtube to mp3" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
+<meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple." />
+<meta property="og:image" content="/image/favicon.PNG" />
+<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
+<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="en-id" />
+<link rel="alternate" href="/youtube-mp3/hi.html" hreflang="in" />
+<link rel="alternate" href="/youtube-mp3/ph.html" hreflang="ph" />
+<link rel="icon" type="image/png" href="/image/favicon.PNG" />
+<meta name="application-name" content="Y2converts.com" />
+<link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>
 								   .responsive {
   width: 100%;
@@ -39,7 +32,7 @@ best youtube to mp3" />
     margin-bottom: 15px;
     text-align: center;
 }</style>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200890208-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -48,9 +41,7 @@ best youtube to mp3" />
 
   gtag('config', 'UA-200890208-2');
 </script>
- 
 </head>
-
 <body>
 <header>
 <div class="main_nav">
@@ -76,34 +67,30 @@ best youtube to mp3" />
 <li><a data-lang="en" href="/youtube-mp3/en-id.html">English</a></li>
 <li><a data-lang="hi" href="/youtube-mp3/hi.html">हिंदी</a></li>
 <li><a data-lang="ph" href="/youtube-mp3/ph.html">philippines</a></li>
-
-
 </ul>
 </div>
 </div>
 </div>
 <div id="navbar" class="navbar-collapse">
 <ul class="nav navbar-nav">
-<li><a href="/youtube-mp3/en-id/"class="active">
+<li><a href="/youtube-mp3/en-id/" class="active">
 Youtube mp3
 </a>
 </li>
-
 <li class="nav-item"> <a href="https://www.youtube.com/channel/UChQ7F1Rx-DWco_PIspv0kUA">
 Follow on Youtube
 </a>
 </li>
 </ul>
 </div>
-
 </header>
 <div class="container">
 <div class="ftco-section center" id="convert">
 <h1 class="title">Youtube mp3</h1>
-<p>Download free mp3 converted youtube video from our free Youtube mp3 converter</p>
+<p>Download free mp3 converted youtube mp3 from our free Youtube mp3 converter</p>
 <form id="search-form" class="search-form relative" action="/en7" method="GET">
 <input id="s_input" type="search" name="q" class="search__input" aria-label="Search" placeholder="Search or paste Youtube link here" value="">
-<button class="btn-red" type="button" onclick="ksearchvideo();">Convert To MP3</button>
+<button class="btn-red" type="button" onclick="ksearchmp3();">Convert To MP3</button>
 </form>
 <div id="content-wrapper" class=""><div class="loading mt-5"> <img alt="loading" src="https://i.ibb.co/fM1gFt5/Pulse-0-7s-226px.png" style="max-width: 60px;"></div></div>
 <div id="search-result">
@@ -111,8 +98,8 @@ Follow on Youtube
 </div>
 <div class="ftco-section center">
 <h2 class="title">The Best Youtube mp3 converter</h2>
-<p class="mw70">Y2converts.com is Youtube mp3 converter and downloader which helps you save Youtube mp3 videos to your device quickly and safely. We have various variety for you to download best Youtube mp3 videos.
-We are the best platform of online Youtube mp3 converter. You will get easy method to convert youtube video to mp3.</p>
+<p class="mw70">Y2converts.com is Youtube mp3 converter and downloader which helps you save Youtube mp3 mp3s to your device quickly and safely. We have various variety for you to download best Youtube mp3 mp3s.
+We are the best platform of online Youtube mp3 converter. You will get easy method to convert youtube mp3 to mp3.</p>
 <ul class="listitem items-more">
 <li>
 <div class="post-image bg1">
@@ -141,16 +128,14 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 <p>We offer premium mp3 converter without a single money. This premium mp3 converter feature makes our converter best in this field. </p>
 </div>
 </div>
-
 </div>
 <div class="ftco-section center">
 <h2 class="title">Youtube MP3 Converter</h2>
-
-<p1 class="mw70" style="font-weight:100">Download Youtube mp3 videos with Y2converts.com YouTube Mp3 Converter. By using our downloader you can convert YouTube videos to MP3, MP4, 3GP,files and download them for free - this service works for computers, tablets and mobile devices. The videos are always converted in the highest available quality OR you can change quality as per your wish.</p1>
+<p1 class="mw70" style="font-weight:100">Download Youtube mp3 mp3s with Y2converts.com YouTube Mp3 Converter. By using our downloader you can convert YouTube mp3s to MP3, MP4, 3GP,files and download them for free - this service works for computers, tablets and mobile devices. The mp3s are always converted in the highest available quality OR you can change quality as per your wish.</p1>
 <p class="magT40"><a class="btn-red mag0" type="button" href="#convert">Convert now</a></p>
 </div>
 <div class="ftco-section center">
-<h2 class="title">How to download Youtube mp3 video in my device? </h2>
+<h2 class="title">How to download Youtube mp3 mp3 in my device? </h2>
 <ul class="listicon liststep">
 <li>
 <span class="number">1</span>
@@ -166,7 +151,6 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 </li>
 </ul>
 </div>
-
 </div>
 </li>
 </div>
@@ -176,53 +160,38 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 </section>
 <div class="ftco-section center">
 <h4 class="title">What is a YouTube to MP3 Converter?</h4>
-
-<p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube mp3 videos to mp3. The program is designed in such a way that the original quality of a Youtube mp3 video is preserved during the conversion process. Also, the program also allows you to play a converted mp3 video directly on any media player. In addition, the program also offers the option to save a video to a specific folder or convert the video to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube videos. It is important to note that the file format used for converting Youtube mp3 videos to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert videos in this format as well.</p1>
-
+<p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube mp3 mp3s to mp3. The program is designed in such a way that the original quality of a Youtube mp3 mp3 is preserved during the conversion process. Also, the program also allows you to play a converted mp3 mp3 directly on any media player. In addition, the program also offers the option to save a mp3 to a specific folder or convert the mp3 to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube mp3s. It is important to note that the file format used for converting Youtube mp3 mp3s to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert mp3s in this format as well.</p1>
 </div>
 <h4 class="title">Convert YouTube MP3</h4>
-
-<p1 class="mw70" style="font-weight:100">Many users are using Youtube with their Android Smartphones or Tablets, Downloading all the video for their Internet TV. If you are an Android user, you can download Youtube Videos for free on your Mobile. However if you are an iOS user, YouTube Video Downloader, if you don't like downloading videos for your Smartphones, You can convert the YouTube Videos to MP3. Most of the users like the Audio quality for their Youtube Videos and YouTube videos download for their smartphones or Tablets. To enjoy the best quality of audio download, I suggest you to download the quality high definition YouTube Video on your Smartphone. On the other hand, if you are the one who like listening the high quality music on your MP3, You can convert the YouTube Videos to MP3.</p1>
-
+<p1 class="mw70" style="font-weight:100">Many users are using Youtube with their Android Smartphones or Tablets, Downloading all the mp3 for their Internet TV. If you are an Android user, you can download Youtube mp3s for free on your Mobile. However if you are an iOS user, YouTube mp3 Downloader, if you don't like downloading mp3s for your Smartphones, You can convert the YouTube mp3s to MP3. Most of the users like the Audio quality for their Youtube mp3s and YouTube mp3s download for their smartphones or Tablets. To enjoy the best quality of audio download, I suggest you to download the quality high definition YouTube mp3 on your Smartphone. On the other hand, if you are the one who like listening the high quality music on your MP3, You can convert the YouTube mp3s to MP3.</p1>
 </div>
-<h4 class="title">How to Convert YouTube Video to MP3 on Mac or Windows PC?</h4>
-
-<p1 class="mw70" style="font-weight:100">This YouTube To MP3 converter works on both Mac and Windows PC. It converts YouTube videos to mp3 files and makes it available for downloading on the other side. All you have to do is to upload the YouTube videos on to the converter website and click the convert button to start converting. It will create multiple MP3 files from the YouTube video that you upload. You can save these MP3 files onto your hard drive or can store them on Google Drive. You can also upload the YouTube videos directly onto Dropbox or OneDrive cloud storage. Download YouTube Videos from YouTube For Free: Sometimes, it may be difficult to download YouTube videos. They are usually not downloadable. This YouTube to MP3 converter makes it easy to download any YouTube video.</p1>
-
+<h4 class="title">How to Convert YouTube mp3 to MP3 on Mac or Windows PC?</h4>
+<p1 class="mw70" style="font-weight:100">This YouTube To MP3 converter works on both Mac and Windows PC. It converts YouTube mp3s to mp3 files and makes it available for downloading on the other side. All you have to do is to upload the YouTube mp3s on to the converter website and click the convert button to start converting. It will create multiple MP3 files from the YouTube mp3 that you upload. You can save these MP3 files onto your hard drive or can store them on Google Drive. You can also upload the YouTube mp3s directly onto Dropbox or OneDrive cloud storage. Download YouTube mp3s from YouTube For Free: Sometimes, it may be difficult to download YouTube mp3s. They are usually not downloadable. This YouTube to MP3 converter makes it easy to download any YouTube mp3.</p1>
 </div>
 <h4 class="title">how to download mp3 songs from youtube</h4>
-
 <p1 class="mw70" style="font-weight:100">Learning how to download mp3 songs from youtube is an easy process.
 The first step is to find a youtube to mp3 converter online.
 The second step is to copy and paste the youtube url into the box and click on “Convert”.
 The third step is to choose the quality of the song that you want, depending on how much time you have and how good of a quality you want. Usually, 128kpbs will be sufficient for most things including listening on YouTube or in your car stereo.
 The last step is clicking “Download MP3” and choosing where you want it downloaded on your pc or phone.
 —</p1>
-
 </div>
 <h4 class="title">Yt to mp3</h4>
-
-<p1 class="mw70" style="font-weight:100">A YouTube to mp3 converter is a tool that converts video files from youtube and other video providers into mp3 files. It is used to download mp3 songs from youtube videos. There are some steps on how to download music from youtube. First step method, search for the video that you want to download. Select it and choose the format that you want for your audio file. Click on "Download" button to start downloading the audio file from Youtube to mp3 converter online service, then wait patiently before your MP3 file is done downloading.
+<p1 class="mw70" style="font-weight:100">A YouTube to mp3 converter is a tool that converts mp3 files from youtube and other mp3 providers into mp3 files. It is used to download mp3 songs from youtube mp3s. There are some steps on how to download music from youtube. First step method, search for the mp3 that you want to download. Select it and choose the format that you want for your audio file. Click on "Download" button to start downloading the audio file from Youtube to mp3 converter online service, then wait patiently before your MP3 file is done downloading.
 There are many reasons why people need a YouTube to mp3 converter; such as if they want to listen in another device, or if their computer doesn't have enough space, or if they just want a back-up copy of their favorite songs .
 </p1>
-
 </div>
 <h4 class="title">Youtube to mp3 converter online</h4>
-
-<p1 class="mw70" style="font-weight:100">You can extract mp3 from youtube videos with the help of a converter website. Before I list out the best youtube to mp3 converter websites, it is worth noting that there are different types of converters available. So make sure you know what type you need before going ahead with any conversion.
+<p1 class="mw70" style="font-weight:100">You can extract mp3 from youtube mp3s with the help of a converter website. Before I list out the best youtube to mp3 converter websites, it is worth noting that there are different types of converters available. So make sure you know what type you need before going ahead with any conversion.
 There are three types of youtube mp3 converters:
-Youtube-to-mp3 offline converters: These programs will download YouTube videos as MP3 files on your computer, which means that they require an internet connection and a running computer in order to work.
+Youtube-to-mp3 offline converters: These programs will download YouTube mp3s as MP3 files on your computer, which means that they require an internet connection and a running computer in order to work.
 YouTube-to-mp3 online converters: These convert files directly from YouTube in your web browser without requiring any downloads</p1>
-
 </div>
 </div>
 <h4 class="title">Conclusion</h4>
-
 <p1 class="mw70" style="font-weight:100">
-That’s it, now you can download your favorite YouTube video and play it on your Android device! I recommend using a stable connection while downloading and converting. I suggest to update your favorite YouTube video to MP3 converter and test it in your mobile device to save a lot of time. But when you’ve got a stable connection, I recommend using this amazing YouTube to MP3 converter! Finally, let me show you some more awesome free YouTube to MP3 converter website! You Might Also Like These Excellent Tools To Convert Videos On Your Computer & Android Device Cheap YouTube Video Downloader & Converter Free YouTube Downloader & converter – Keeps the files safe so no worries about data loss. Free YouTube Downloader: You can easily download Youtube Videos from 1.</p1>
-
+That’s it, now you can download your favorite YouTube mp3 and play it on your Android device! I recommend using a stable connection while downloading and converting. I suggest to update your favorite YouTube mp3 to MP3 converter and test it in your mobile device to save a lot of time. But when you’ve got a stable connection, I recommend using this amazing YouTube to MP3 converter! Finally, let me show you some more awesome free YouTube to MP3 converter website! You Might Also Like These Excellent Tools To Convert mp3s On Your Computer & Android Device Cheap YouTube mp3 Downloader & Converter Free YouTube Downloader & converter – Keeps the files safe so no worries about data loss. Free YouTube Downloader: You can easily download Youtube mp3s from 1.</p1>
 </div>
-
 <script type="text/javascript">
     var c_url_tmp = "http:\/\/y2converts.com\/youtube-mp3\/en-id?q=";
     var yt_tmp = "https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D";
@@ -247,7 +216,6 @@ That’s it, now you can download your favorite YouTube video and play it on you
 </div>
 </footer>
 <script type="text/javascript" src="/js/js1.js" async defer></script>
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org/", 
@@ -271,13 +239,13 @@ That’s it, now you can download your favorite YouTube video and play it on you
   },
   "step": [{
     "@type": "HowToStep",
-    "text": "1.Copy the video url you wish to convert.",
+    "text": "1.Copy the mp3 url you wish to convert.",
     "image": "https://i.ibb.co/WfJKDL6/1.png",
-    "name": "Copy video url",
+    "name": "Copy mp3 url",
     "url": "https://y2converts.com/youtube-mp3/en-id"
   },{
     "@type": "HowToStep",
-    "text": "2. Paste the video url in searchbox or search for keyword and click convert.",
+    "text": "2. Paste the mp3 url in searchbox or search for keyword and click convert.",
     "image": "https://i.ibb.co/pQSd9KF/2.png",
     "name": "Paste or Search and click convert.",
     "url": "https://y2converts.com/youtube-mp3/en-id"
@@ -297,8 +265,5 @@ Don't Forget to SHARE the Website",
   }]    
 }
 </script>
-
-
-
 </body>
 </html>
