--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -265,5 +265,6 @@ Don't Forget to SHARE the Website",
   }]    
 }
 </script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60cc6660890a374e"></script>
 </body>
 </html>
