--- a/404.html
+++ b/404.html
@@ -6,6 +6,13 @@
     <title>Page Not Found</title>
     <meta http-equiv="refresh" content="0"; url="https://y2converts.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
+<script type = "text/javascript">
+         <!--
+            function Redirect() {
+               window.location = "https://y2converts.com";
+            }
+         //-->
+      </script>
     <link href="https://fonts.googleapis.com/css2?family=Chango&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <style>
         body{
