--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <script type = "text/javascript">
          <!--
             function Redirect() {
-               window.location = "https://y2converts.com";
+               window.location = "https://y2converts.com/youtube-mp3/en-id";
             }
          //-->
       </script>
