--- a/404.html
+++ b/404.html
@@ -7,12 +7,10 @@
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <script type = "text/javascript">
-         <!--
-            function Redirect() {
-               window.location = "https://y2converts.com/youtube-mp3/en-id";
-            }
-         //-->
+         location.href = 'https://y2converts.com';
+
       </script>
+
     <link href="https://fonts.googleapis.com/css2?family=Chango&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <style>
         body{
