--- a/12.html
+++ b/12.html
@@ -23,9 +23,10 @@
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>
-								   .responsive {
-  width: 100%;
-  height: auto;
+ .responsive {
+    max-width: 100%; 
+    width: auto; 
+    height: auto;
 }
 								   h4{
     font-weight: 600;
@@ -86,9 +87,7 @@ Follow on Youtube
 </header>
 <div class="container">
 <div class="ftco-section center" id="convert">
-<a href="https://www.qries.com/">
-         <img alt="Qries" src="https://www.qries.com/images/banner_logo.png"
-         width=150" height="70">
+<a target="_blank" href="https://shareasale.com/r.cfm?b=1765212&amp;u=2831906&amp;m=97231&amp;urllink=&amp;afftrack="><img src="https://static.shareasale.com/image/97231/468x60_03.gif" border="0" class="responsive" alt="Traffic Analysts Tool" /></a>
 <h1 class="title">Youtube mp3</h1>
 <p>Download free mp3 converted youtube mp3 from our free Youtube mp3 converter</p>
 <form id="search-form" class="search-form relative" action="/en7" method="GET">
